# ModLisp

./: .gitignore  CMakeLists.txt  CMakeLists_ForWindows.txt  README.md  argTable
inputs/: task_2.cilisp  task_3.cilisp  task_4.cilisp  task_5.cilisp
inputs/task_1/: abs.cilisp  add.cilisp  cbrt.cilisp  check1.cilisp  check1_out.txt  composition.cilisp  div.cilisp  exp.cilisp  exp2.cilisp  hypot.cilisp  log.cilisp  max.cilisp  min.cilisp  mult.cilisp  neg.cilisp  number.cilisp  pow.cilisp  remainder.cilisp  sqrt.cilisp  sub.cilisp
src/: cilisp.c  cilisp.h  cilisp.l  cilisp.y  yyreadprint.c
